some corrections and new df creation

--- a/files_for_lab/csv_files/lab-customer-analysis-round-6.ipynb
+++ b/files_for_lab/csv_files/lab-customer-analysis-round-6.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "(9125, 24)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "[9125 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "[9125 rows x 14 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
        "[9125 rows x 16 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1668,7 @@
        "[9125 rows x 18 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
        "[9125 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,15 +1885,58 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### And now I will create a dataframe containing all the encoded categoricals and the numericals"
+    "*As seen in the previous lab (5), the number of open complaints was not a variable that we could manipulate in a satisfactory way with scaling and transforming. I will group its data points as 1 in case of any open complaints or 0 in case of none*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 1, 3, 5, 4], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_num['number_of_open_complaints'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_num['number_of_open_complaints'] = X_num['number_of_open_complaints'].apply(lambda x: str(x))\n",
+    "X_num['number_of_open_complaints'] = (X_num['number_of_open_complaints'].str.replace('2', '1')\n",
+    "                                                        .replace('3', '1')\n",
+    "                                                        .replace('4', '1')\n",
+    "                                                        .replace('5', '1'))\n",
+    "X_num['number_of_open_complaints'] = X_num['number_of_open_complaints'].apply(lambda x: int(x))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### And now I will create a dataframe containing all the encoded categoricals and numericals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2219,7 @@
        "      <td>85</td>\n",
        "      <td>9</td>\n",
        "      <td>37</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -2294,7 +2337,7 @@
        "...                         ...                 ...               ...   \n",
        "9120                          0                   2                 1   \n",
        "9121                          0                   1                 1   \n",
-       "9122                          3                   2                 2   \n",
+       "9122                          1                   2                 2   \n",
        "9123                          0                   3                 1   \n",
        "9124                          0                   1                 2   \n",
        "\n",
@@ -2340,7 +2383,7 @@
        "[9125 rows x 25 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2422,7 @@
        "2738"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2442,7 @@
        "9125"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2462,7 @@
        "6387"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2588,7 @@
        "      <td>95</td>\n",
        "      <td>3</td>\n",
        "      <td>51</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -2644,7 +2687,7 @@
        "      number_of_open_complaints  number_of_policies  employmentstatus  \\\n",
        "2090                          0                   8                 1   \n",
        "2544                          0                   1                 1   \n",
-       "8895                          4                   8                 3   \n",
+       "8895                          1                   8                 3   \n",
        "3120                          0                   1                 1   \n",
        "4832                          0                   1                 2   \n",
        "\n",
@@ -2670,7 +2713,7 @@
        "4832       1.0          1.0             0.0               0.0             1.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2689,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2698,7 +2741,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2710,17 +2753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([241.14661013, 565.15686796, 772.36163534, ..., 514.40699268,\n",
-       "       387.37481495, 692.36261932])"
+       "array([237.19684666, 566.68950053, 768.77174712, ..., 515.59727393,\n",
+       "       382.9265856 , 693.97926772])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2728,37 +2771,6 @@
    "source": [
     "predictions  = model.predict(X_test)\n",
     "predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6934     292.274846\n",
-       "4204     523.200000\n",
-       "7924     553.385695\n",
-       "5665     480.000000\n",
-       "9        425.527834\n",
-       "           ...     \n",
-       "2000    1610.261914\n",
-       "7133     484.013411\n",
-       "323      365.364581\n",
-       "6299     433.160284\n",
-       "2804     934.656068\n",
-       "Name: total_claim_amount, Length: 2738, dtype: float64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test"
    ]
   },
   {
@@ -2779,8 +2791,8 @@
      "output_type": "stream",
      "text": [
       "r2 =  0.76\n",
-      "RMSE =  140.46\n",
-      "MSE =  19728.22\n",
+      "RMSE =  140.42\n",
+      "MSE =  19718.55\n",
       "MAE =  96\n"
      ]
     }
@@ -2799,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2828,7 @@
        "Name: total_claim_amount, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2832,6 +2844,16 @@
    "metadata": {},
    "source": [
     "##### *It looks like our predictions are not good enough, since the RMSE is almost 1/3 of the average total claim amount and the MAE close to 1/4 of the same value*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_new = pd.concat([X, y], axis=1)\n",
+    "data_new.to_csv('marketing_customer_analysis.csv', sep=',', index=False)"
    ]
   }
  ],
